[package]
name = "os"
version = "0.1.0"
authors = ["moon548834 <fzp548834@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort" 

[dependencies]
riscv = { path = "crate/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.1"
buddy-allocator = { path = "crate/buddy-allocator" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.3"
