[package]
name = "os"
version = "0.1.0"
authors = ["moon548834 <fzp548834@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort" 

[dependencies]
riscv = { path = "crate/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.3"
#buddy-allocator = { path = "crate/buddy-allocator" }
spin = "0.5.2"
